[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/MultiplayerScreen.gd" type="Script" id=1]
[ext_resource path="res://scenes/controls/buttons/menubuttons/HostButton.tscn" type="PackedScene" id=2]
[ext_resource path="res://scenes/controls/buttons/menubuttons/JoinButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/controls/FadeIn.tscn" type="PackedScene" id=4]

[node name="MultiplayerScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 120.0
margin_top = 80.0
margin_right = -120.0
margin_bottom = -80.0

[node name="Buttons" type="VBoxContainer" parent="MarginContainer"]
margin_right = 1040.0
margin_bottom = 560.0
custom_constants/separation = 20
alignment = 1

[node name="HostButton" parent="MarginContainer/Buttons" instance=ExtResource( 2 )]
margin_top = 210.0
margin_right = 1040.0
margin_bottom = 270.0

[node name="JoinButton" parent="MarginContainer/Buttons" instance=ExtResource( 3 )]
margin_top = 290.0
margin_right = 1040.0
margin_bottom = 350.0

[node name="FadeIn" parent="." instance=ExtResource( 4 )]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
